// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIBannerAction /> should render a passed qaHook as an auotmation id 1`] = `
<ul
  className="xui-banner--actions"
  data-automationid="banner-action"
>
  <button>
    Action 1
  </button>
  <button>
    Action 2
  </button>
</ul>
`;

exports[`<XUIBannerAction /> should render and includes no automation id by default 1`] = `
<ul
  className="xui-banner--actions"
>
  <button>
    Action
  </button>
  <button>
    Action
  </button>
</ul>
`;

exports[`<XUIBannerAction /> should render custom classes on the root ul DOM node 1`] = `
<ul
  className="example-class xui-banner--actions"
>
  <button>
    Action
  </button>
  <button>
    Action
  </button>
</ul>
`;
